Fixes title not properly aligned

--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -2,6 +2,11 @@
 
 
 #toolbar {
+    button{
+        width: 75px;
+        height: 50px;
+
+    }
     -webkit-app-region: drag;
     // makes toolbar fixed to top of page
     position: fixed;
